--- a/Updates&Progress.ipynb
+++ b/Updates&Progress.ipynb
@@ -29,13 +29,12 @@
     "\n",
     "### Progress:\n",
     "* Imported file \n",
-    "* Made fx \n",
+    "* Made fx (for small dataset)\n",
     "\n",
     "```\n",
     "def avgWell():\n",
     "    \"\"\"The goal of code is to calculate the average well depth for a specifc well. The\n",
-    "    input must be well data file (txt/csv) and the function will output a .csv file with the \n",
-    "    3 columns: well name, average water level, and years of recorded data\"\"\"\n",
+    "    input must be well data file (txt/csv) and the function will output the average\"\"\"\n",
     "    \n",
     "    Numyears = len(df.dates)\n",
     "    sumdepth = sum(df.depths)\n",
@@ -59,7 +58,7 @@
     "    print(df)\n",
     "    ```\n",
     "\n",
-    "<img src=\"gwlevels.jpg\" width=\"500\"/>\n",
+    "<img src=\"gwlevels.jpg\" width=\"350\"/>\n",
     "\n",
     "### Roadblocks:\n",
     " * Saving output var after handling headers \n",
@@ -72,7 +71,7 @@
     "        \n",
     "  ```\n",
     "\n",
-    " * Converting/handling depths above datums v depth from land surface \n",
+    "* Converting/handling depths above datums v depth from land surface \n",
     "    \n",
     "\n",
     "\n",
