--- a/Updates&Progress.ipynb
+++ b/Updates&Progress.ipynb
@@ -1,8 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Visualizing Groundwater Variation Across KS\n",
     "\n",
@@ -14,7 +16,7 @@
     "I aim to construct code using python that will calculate the average water level depth over time for an individual well.  The goal is to apply this code to calculate the water level averages to other wells located across the Kansas precipitation gradient to understand and quantify changes in groundwater levels over time.\n",
     "\n",
     "### Outcomes\n",
-    "The goal for this code is to be able to process .gz data files extracted from USGS, to calculate averages of groundwater levels from the past 20 years at a specific location (lat./long. coordinates are already known), and export a new file (.csv) that has the average water level, the years of available data, as well as the well name and location.\n",
+    "The goal for this code is to be able to process .gz data files extracted from USGS, to calculate averages of groundwater levels from the past 20 years at a specific location (lat./long. coordinates are already known), store variables for average water level, the years of available data, the well name and location and export a new file (.csv) that contains 3 varaibles for wells.\n",
     "\n",
     "### Background\n",
     "In an agriculturally driven state such as Kansas, water availability is invaluable to the sustainability and growth of both the population and economy. The research for my thesis specifically aims to characterize the variation of water availability and quality across the Kansas aridity gradient. Calculating the water level averages of wells across Kansas would be beneficial towards understanding variation in groundwater levels over time, and potentially give insight on future availabilty trends as well as find relationships between precipitation.\n",
@@ -36,9 +38,9 @@
     "    \"\"\"The goal of code is to calculate the average well depth for a specifc well. The\n",
     "    input must be well data file (txt/csv) and the function will output the average\"\"\"\n",
     "    \n",
-    "    Numyears = len(df.dates)\n",
+    "    NumbDates = len(df.dates)\n",
     "    sumdepth = sum(df.depths)\n",
-    "    avgWD = sumdepth / Numyears\n",
+    "    avgWD = sumdepth / NumbDates\n",
     "    \n",
     "    return avgWD\n",
     "\n",
