--- a/Updates&Progress.ipynb
+++ b/Updates&Progress.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualizing Groundwater Variation Across KS\n",
+    "# Groundwater Variation Across KS\n",
     "\n",
     "**Name**: Bre Waterman <br/>\n",
     "**Semester**: Spring 2019 <br/>\n",
