--- a/finalpres.ipynb
+++ b/finalpres.ipynb
@@ -1739,6 +1739,7 @@
     " * Trying to get graphs in 'normal' format/second axis  \n",
     " * .gif - Getting the .gif to have all three wells at once, not just replacing eathother\n",
     " * Looking at other data (precipitation/discharge) to understand patterns\n",
+    " * Clean code\n",
     " "
    ]
   },
