adding gif files

--- a/finalpres.ipynb
+++ b/finalpres.ipynb
@@ -14,7 +14,7 @@
     "The objective of this code is to be able to process text files extracted from USGS, calculate the average well depth per year, and output a figure that shows the change in groundwater levels over total years the well was/is active. After this was achieved, the goal was to output a .gif to visually compare the changes of various wells located near Lawrence, Ft. Riley, and Hays in a unique way.\n",
     "\n",
     "## Background\n",
-    "The goal of this code was to provide a visual for an aspect of my research, which aims to understand how groundwater-surface water connectivty varies across the state and the implications connectivity then has on stream redox chemistry. We hypothesize that the water table will decrease westward across the state due to climate, topography and use-age rates, thus decreasing the contribution of groundwater to streams westward. Alluival aquifers were initially chosen due to proximity to study sites."
+    "The goal of this code was to provide a visual for an aspect of my research, which aims to understand how groundwater-surface water connectivty varies across the state and the implications connectivity then has on stream redox chemistry. We hypothesize that the water table will decrease westward across the state due to climate, topography and usage rates, thus decreasing the contribution of groundwater to streams westward. Alluival aquifers were initially chosen due to proximity to study sites."
    ]
   },
   {
